@@ -10,6 +10,23 @@ class GetDetails
         $this->database = $database->dbObject;
     }
 
+    public function getIpAndAlias(int $hostId)
+    {
+        $sql = "SELECT
+                    `Host_Url_And_Port` as `urlAndPort`,
+                    `Host_Alias` as `alias`
+                FROM
+                    `Hosts`
+                WHERE
+                    `Host_ID` = :hostId
+                ";
+        $do = $this->database->prepare($sql);
+        $do->execute([
+            ":hostId"=>$hostId
+        ]);
+        return $do->fetch(\PDO::FETCH_ASSOC);
+    }
+
     public function getAll($hostId)
     {
         $sql = "SELECT
