@@ -15,6 +15,7 @@ Changed
 Added
     Let user choose shell when opening container console session (#116)
     Right click context menu for containers (#118)
+    A server overview page (#121)
 
 0.4.0
 
